feat: Implement user dashboard displaying workout statistics and streak tracking.