@@ -1,17 +1,9 @@
 package com.iron.backend.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.iron.backend.domain.exercise.Exercise;
 import com.iron.backend.domain.user.User;
 import com.iron.backend.domain.workout.WorkoutSession;
-import com.iron.backend.domain.workout.WorkoutSet;
-import com.iron.backend.dto.AiWorkoutResult;
-import com.iron.backend.dto.LogWorkoutResponse;
-import com.iron.backend.dto.WorkoutLogDto;
 import com.iron.backend.repository.UserRepository;
 import com.iron.backend.repository.WorkoutSessionRepository;
-import com.iron.backend.repository.WorkoutSetRepository;
-import com.iron.backend.service.ai.GeminiService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,98 +13,125 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
 class WorkoutServiceTest {
 
     @Mock
-    private GeminiService geminiService;
-    @Mock
-    private AnalysisService analysisService;
-    @Mock
-    private ExerciseService exerciseService;
-    @Mock
     private UserRepository userRepository;
+
     @Mock
     private WorkoutSessionRepository workoutSessionRepository;
-    @Mock
-    private WorkoutSetRepository workoutSetRepository;
-    @Mock
-    private ObjectMapper objectMapper;
 
     @InjectMocks
     private WorkoutService workoutService;
 
-    private User user;
-    private WorkoutLogDto logDto;
+    private User testUser;
 
     @BeforeEach
     void setUp() {
-        user = new User("test@test.com", "pw", "user");
-        user.setUserId(1L);
-        user.setGeminiApiKey("valid-key");
-
-        logDto = new WorkoutLogDto();
-        logDto.setUserId(1L);
-        logDto.setRawInput("벤치프레스 60kg 10회");
+        testUser = new User("test@example.com", "password", "TestUser");
+        testUser.setUserId(1L);
     }
 
     @Test
-    @DisplayName("정상적으로 운동 로그를 생성하고 저장한다")
-    void logWorkout_Success() throws Exception {
-        // Given
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        
-        AiWorkoutResult mockResult = new AiWorkoutResult();
-        mockResult.setFeedback("Good!");
-        AiWorkoutResult.AiExercise aiEx = new AiWorkoutResult.AiExercise();
-        aiEx.setName("벤치프레스");
-        aiEx.setMain_category("가슴");
-        
-        AiWorkoutResult.AiSet aiSet = new AiWorkoutResult.AiSet();
-        aiSet.setWeight(60.0);
-        aiSet.setReps(10);
-        
-        aiEx.setSets(List.of(aiSet));
-        mockResult.setExercises(List.of(aiEx));
+    @DisplayName("연속 3일 운동 시 스트릭이 3이 되어야 함")
+    void testStreakCalculation_ThreeConsecutiveDays() {
+        // Given: 2월 3, 4, 5일에 운동 기록
+        LocalDate referenceDate = LocalDate.of(2026, 2, 5);
+        List<LocalDate> workoutDates = Arrays.asList(
+            LocalDate.of(2026, 2, 5),
+            LocalDate.of(2026, 2, 4),
+            LocalDate.of(2026, 2, 3)
+        );
 
-        when(geminiService.parseWorkoutLog(anyString(), anyString())).thenReturn(mockResult);
-        
-        Exercise mockExercise = new Exercise("벤치프레스", "가슴");
-        when(exerciseService.findOrCreateExercise(eq("벤치프레스"), eq("가슴"), any())).thenReturn(mockExercise);
-        
-        when(objectMapper.writeValueAsString(any())).thenReturn("{\"json\":\"mock\"}");
+        when(workoutSessionRepository.findDistinctWorkoutDatesByUserId(1L))
+            .thenReturn(workoutDates);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
 
-        // When
-        LogWorkoutResponse response = workoutService.logWorkout(logDto);
+        // When: 스트릭 재계산
+        workoutService.recalculateUserStreak(1L, referenceDate);
 
-        // Then
-        assertThat(response).isNotNull();
-        assertThat(response.getFeedback()).isEqualTo("Good!");
-        
-        verify(workoutSessionRepository).save(any(WorkoutSession.class));
-        verify(workoutSetRepository, times(1)).save(any(WorkoutSet.class));
-        verify(exerciseService).findOrCreateExercise(eq("벤치프레스"), eq("가슴"), any());
+        // Then: 스트릭이 3으로 업데이트되어야 함
+        verify(userRepository).save(testUser);
+        assertEquals(3, testUser.getCurrentStreak());
     }
-    
+
     @Test
-    @DisplayName("API 키가 없으면 예외를 던진다")
-    void logWorkout_NoApiKey_ThrowsException() {
-        user.setGeminiApiKey(null);
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        
-        assertThatThrownBy(() -> workoutService.logWorkout(logDto))
-                .isInstanceOf(IllegalStateException.class)
-                .hasMessageContaining("API Key is missing");
+    @DisplayName("운동 날짜가 어제까지면 스트릭 유지")
+    void testStreakCalculation_LastWorkoutYesterday() {
+        // Given: 마지막 운동이 어제 (2/4), 오늘은 2/5
+        LocalDate referenceDate = LocalDate.of(2026, 2, 5);
+        List<LocalDate> workoutDates = Arrays.asList(
+            LocalDate.of(2026, 2, 4),
+            LocalDate.of(2026, 2, 3),
+            LocalDate.of(2026, 2, 2)
+        );
+
+        when(workoutSessionRepository.findDistinctWorkoutDatesByUserId(1L))
+            .thenReturn(workoutDates);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+
+        // When: 스트릭 재계산
+        workoutService.recalculateUserStreak(1L, referenceDate);
+
+        // Then: 스트릭은 유지되어야 함 (3일)
+        verify(userRepository).save(testUser);
+        assertEquals(3, testUser.getCurrentStreak());
+    }
+
+    @Test
+    @DisplayName("운동 날짜가 이틀 전이면 스트릭 0")
+    void testStreakCalculation_LastWorkoutTwoDaysAgo() {
+        // Given: 마지막 운동이 이틀 전 (2/3), 오늘은 2/5
+        LocalDate referenceDate = LocalDate.of(2026, 2, 5);
+        List<LocalDate> workoutDates = Arrays.asList(
+            LocalDate.of(2026, 2, 3),
+            LocalDate.of(2026, 2, 2),
+            LocalDate.of(2026, 2, 1)
+        );
+
+        when(workoutSessionRepository.findDistinctWorkoutDatesByUserId(1L))
+            .thenReturn(workoutDates);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+
+        // When: 스트릭 재계산
+        workoutService.recalculateUserStreak(1L, referenceDate);
+
+        // Then: 스트릭은 0이 되어야 함
+        verify(userRepository).save(testUser);
+        assertEquals(0, testUser.getCurrentStreak());
+    }
+
+    @Test
+    @DisplayName("비연속적인 운동 날짜는 마지막 연속 기간만 계산")
+    void testStreakCalculation_NonConsecutiveDays() {
+        // Given: 2/5, 2/4, 2/2, 2/1 (2/3이 빠짐)
+        LocalDate referenceDate = LocalDate.of(2026, 2, 5);
+        List<LocalDate> workoutDates = Arrays.asList(
+            LocalDate.of(2026, 2, 5),
+            LocalDate.of(2026, 2, 4),
+            LocalDate.of(2026, 2, 2),
+            LocalDate.of(2026, 2, 1)
+        );
+
+        when(workoutSessionRepository.findDistinctWorkoutDatesByUserId(1L))
+            .thenReturn(workoutDates);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+
+        // When: 스트릭 재계산
+        workoutService.recalculateUserStreak(1L, referenceDate);
+
+        // Then: 스트릭은 2 (2/5, 2/4)가 되어야 함
+        verify(userRepository).save(testUser);
+        assertEquals(2, testUser.getCurrentStreak());
     }
 }
